# nagi

./: .gitignore  CMakeLists.txt  Makefile.in  README  README.markdown  README.md  STYLE.md  config.h.in  configure  configure.ac  license.txt  missing  mkbuild.sh  readme.html  tarball
CMake/: AddSDL2.cmake
doc/: nagi_docs.html  nagi_history.html  nagi_issues.txt  nagi_legal.html  nagi_notes.html  nagi_sdl.txt  nagi_standard_ini.rtf  nagi_todo.rtf
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.common  Makefile.in  Makefile.linux  Makefile.win  agi.c  agi.h  agi_string.c  agi_string.h  base.c  base.h  cmd_misc.c  cmd_misc.h  config.c  config.h  d.bat  debug.c  debug.h  decrypt.c  decrypt.h  depend.sh  flags.c  flags.h  game_id.c  game_id.h  history.txt  initialise.c  initialise.h  list.c  list.h  log.c  log.h  n.bat  nagi.rc  nagi_main.c  new_room.c  new_room.h  (+16 more)
src/lib/: utf8_decode.c  utf8_decode.h
src/logic/: arithmetic.c  arithmetic.h  cmd_table.c  cmd_table.h  logic_base.c  logic_base.h  logic_eval.c  logic_eval.h  logic_execute.c  logic_execute.h
src/picture/: pic_add.c  pic_add.h  pic_render.c  pic_render.h  pic_res.c  pic_res.h  pic_stack.c  pic_stack.h  sbuf_util.c  sbuf_util.h
src/res/: res.h  res_dir.c  res_lzw.c  res_pic.c  res_vol.c
src/sound/: pcm_out.c  pcm_out.h  pcm_out_sdl.c  pcm_out_sdl.h  sound.h  sound_base.c  sound_base.h  sound_gen.c  sound_gen.h  sound_sample.c  sound_sdl.c  tone.c  tone.h  tone_pcm.c  tone_pcm.h
src/sys/: agi_file.c  agi_file.h  chargen.c  chargen.h  delay.c  delay.h  drv_dummy.c  drv_dummy.h  drv_sdl.c  drv_sdl.h  drv_video.c  drv_video.h  drvpick.c  drvpick.h  endian.c  endian.h  error.c  error.h  font_16x16.c  font_16x16.h  font_4x8.c  font_4x8.h  font_8x8.c  font_8x8.h  gfx.c  gfx.h  glob_sys.c  glob_sys.h  ini_config.c  ini_config.h  lib_wrapper..c  lib_wrapper.h  mem_wrap.c  mem_wrap.h  memory.c  memory.h  rand.c  rand.h  script.c  script.h  (+18 more)
src/test/: CMakeLists.txt  check_ui_string.c
src/tools/: font_16x16.fnt  font_8x8.fnt  savefont.c
src/ui/: agi_text.c  agi_text.h  cmd_input.c  cmd_input.h  controller.c  controller.h  events.c  events.h  list_box.c  list_box.h  menu.c  menu.h  mouse.c  mouse.h  msg.c  msg.h  parse.c  parse.h  printf.c  printf.h  status.c  status.h  string.c  string.h  window.c  window.h
src/version/: agi_crc.c  agi_crc.h  gamelist.c  gamelist.h  standard.c  standard.h  stuff.txt  ver_init.c  ver_init.h
src/view/: obj_base.c  obj_base.h  obj_blit.c  obj_blit.h  obj_block.c  obj_block.h  obj_cycle.c  obj_cycle.h  obj_drawerase.c  obj_drawerase.h  obj_loop.c  obj_loop.h  obj_motion.c  obj_motion.h  obj_motion_cmd.c  obj_motion_cmd.h  obj_picbuff.c  obj_picbuff.h  obj_position.c  obj_position.h  obj_priority.c  obj_priority.h  obj_proximity.c  obj_proximity.h  obj_update.c  obj_update.h  view_base.c  view_base.h
support/: sdl2-config.cmake
